--- a/scss/mixins/_transitions.scss
+++ b/scss/mixins/_transitions.scss
@@ -1,5 +1,5 @@
 @mixin transition($speed: '500ms', $properties: 'all', $easing: cubic-bezier(.23, 1, .32, 1)) {
-  transition: $properties $speed $easing;
+  transition: #{$properties} #{$speed} #{$easing};
 }
 
 @mixin no-transition() {
